<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    tools:context="com.hoarom.ezMobile.activities.MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/textview_search_layout"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/search_id_securities"
            android:textColor="#2c3e50"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#e5e5e5"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/icon_arrow_to_right"
            android:ellipsize="end"
            android:gravity="center|left"
            android:maxLines="1"
            android:minHeight="50dp"
            android:padding="8dp"
            android:text="@string/tong_quan_thi_truong"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#efefef"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/index"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center|left"
                android:maxLines="1"
                android:padding="4dp"
                android:text="@string/index"
                android:textColor="#444"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center|right"
                android:maxLines="1"
                android:padding="4dp"
                android:text="@string/Price"
                android:textColor="#444"
                android:textSize="12sp" />

            <include
                android:id="@+id/change"
                layout="@layout/item_table_main_header_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <include
                android:id="@+id/values"
                layout="@layout/item_table_main_header_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical">


        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:gravity="center|left"
            android:maxLines="1"
            android:paddingBottom="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:text="@string/bang_gia"
            android:textColor="#444"
            android:textSize="14sp" />


    </LinearLayout>
</FrameLayout>